# requirements-manager

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: CI.yml
benches/: add_many.rs  update_hrids.rs  update_hrids.rs.backup
examples/mdbook/: README.md  book.toml
examples/mdbook/src/: USR-001.md  USR-002.md
examples/sphinx/: README.md  conf.py  index.md  pyproject.toml
examples/sphinx/requirements/: USR-001.md  USR-002.md
reqs/: .index.toml  SYS-001.md  SYS-002.md  SYS-003.md  SYS-004.md  SYS-005.md  SYS-006.md  SYS-007.md  TST-001.md  TST-002.md  TST-003.md  TST-1.md  TST-2.md  TST-3.md  USR-001.md  USR-002.md  USR-003.md  USR-004.md  USR-005.md
src/: cli.rs  domain.rs  lib.rs  main.rs  storage.rs
src/domain/: config.rs  hrid.rs  hrid_tree.rs  index.rs  requirement.rs  tree.rs
src/domain/requirement/: markdown.rs  storage.rs
src/storage/: directory.rs  dto.rs  tree.rs
src/storage.backup/: index.rs  requirement.rs
