[package]
name = "requirements-manager"
version = "0.1.0"
description = "Plain-text requirements management tool"
repository = "https://github.com/danieleades/requirements-manager"
keywords = ["requirements", "plain-text", "cli"]
categories = ["command-line-utilities", "development-tools"]
edition = "2024"
license = "MIT"
rust-version = "1.85.1"

[lib]
name = "requiem"
path = "src/lib.rs"

[[bin]]
name = "req"
path = "src/main.rs"

[dependencies]
borsh = { version = "1.5.7", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
sha2 = "0.10.9"
thiserror = "2.0.12"
toml = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
walkdir = "2.5.0"

[dev-dependencies]
criterion = "0.6.0"
tempfile = "3.20.0"

[[bench]]
name = "add_many"
harness = false

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "deny"
